INDIGO BUG COMMIT VINAY '09-01-2025'

--- a/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoTripsellPatialView.cshtml
+++ b/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoTripsellPatialView.cshtml
@@ -399,8 +399,8 @@
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
                                                         <li>2: Check-In: 15 k.g  (1 piece)</li>
-                                                        <li>3: Cancellation: 3500 :-  3 hrs before departure</li>
-                                                        <li>4: Date Change: 3200 :-  3 hrs before departure</li>
+                                                        <li>3: Cancellation: 3500 (3 hrs before departure)</li>
+                                                        <li>4: Date Change: 3200 (3 hrs before departure)</li>
                                                         <li>5: Seat: Chargeable</li>
                                                         <li>6: Meal: Chargeable</li>
 
@@ -417,8 +417,8 @@
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
                                                         <li>2: Check-In: 25  k.g  (1 piece)</li>
-                                                        <li>3: Cancellation: 500 :-  Before 3days upto 2 hrs from departure</li>
-                                                        <li>4: Date Change: 500 :-  Before 3days upto 2 hrs from departure</li>
+                                                        <li>3: Cancellation: 999 :-  (3 days upto 2 hrs prior from departure)</li>
+                                                        <li>4: Date Change: 249:- Before 3days upto 2 hrs from departure</li>
                                                         <li>5: Seat: Free seats</li>
                                                         <li>6: Meal: (Free meal) per person</li>
 
@@ -436,8 +436,8 @@
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
                                                         <li>2: Check-In: 15 k.g  (1 piece)</li>
-                                                        <li>3: Cancellation: 3500 :-  (3 days upto 2 hrs prior from departure)</li>
-                                                        <li>4: Date Change: 3000:- Before 3days upto 2 hrs from departure</li>
+                                                        <li>3: Cancellation: 999 :-  (3 days upto 2 hrs prior from departure)</li>
+                                                        <li>4: Date Change: 2999:- Before 3days upto 2 hrs from departure</li>
                                                         <li>5: Seat: Free seats</li>
                                                         <li>6: Meal: (Free meal) per person</li>
 
@@ -454,8 +454,8 @@
                                                     <ul>
                                                         <li>1: Cabin Bag: 7 k.g</li>
                                                         <li>2: CHECK-IN: 15 k.g (1 piece)</li>
-                                                        <li>3: CANCELLATION: 3500 :-  (3 days upto 2 hrs prior from departure)</li>
-                                                        <li>4: DATE CHANGE: 3000:- Before 3days upto 2 hrs from departure</li>
+                                                        <li>3: CANCELLATION: 3999 (3 hrs before departure)</li>
+                                                        <li>4: DATE CHANGE: 2991 (3 hrs before departure)</li>
                                                         <li>5: SEAT : Chargeable</li>
                                                         <li>6: MEAL : Chargeable</li>
 
@@ -580,7 +580,7 @@
                                             </tr>
                                             <tr>
                                                 <td>3 hrs before departure</td>
-                                                <td>Rs.3500 per adult</td>
+                                                <td>Rs.3500</td>
 
                                             </tr>
 
@@ -596,8 +596,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>Before 3days upto 2 hrs from departure</td>
-                                                <td>Rs.500</td>
+                                                <td>3 days upto 2 hrs prior from departure</td>
+                                                <td>Rs.999</td>
 
                                             </tr>
 
@@ -614,7 +614,7 @@
                                             <tr>
 
                                                 <td>3 days upto 2 hrs prior from departure</td>
-                                                <td>RS. 3500</td>
+                                                <td>RS. 999</td>
                                             </tr>
 
                                         </table>
@@ -628,8 +628,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>3 days upto 2 hrs prior from departure</td>
-                                                <td>Rs.3500 per adult</td>
+                                                <td>3 hrs before departure</td>
+                                                <td>Rs.3999</td>
 
                                             </tr>
 
@@ -707,7 +707,7 @@
                                             </tr>
                                             <tr>
                                                 <td>3 hrs before departure</td>
-                                                <td>Rs.3200 per adult</td>
+                                                <td>Rs. 3200</td>
 
                                             </tr>
 
@@ -724,7 +724,7 @@
                                             </tr>
                                             <tr>
                                                 <td>Before 3days upto 2 hrs from departure</td>
-                                                <td>Rs.500</td>
+                                                <td>Rs. 249</td>
 
                                             </tr>
 
@@ -736,12 +736,11 @@
                                             <tr>
                                                 <td><b>Time</b></td>
                                                 <td><b>Charges</b></td>
-
                                             </tr>
                                             <tr>
 
                                                 <td>Before 3days upto 2 hrs from departure</td>
-                                                <td>Rs. 3000</td>
+                                                <td>Rs. 2999</td>
                                             </tr>
 
                                         </table>
@@ -755,8 +754,8 @@
 
                                             </tr>
                                             <tr>
-                                                <td>Before 3days upto 2 hrs from departure</td>
-                                                <td>Rs.3000 per adult</td>
+                                                <td>3 hrs before departure</td>
+                                                <td>Rs.2991</td>
 
                                             </tr>
 
