--- a/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
@@ -545,11 +545,11 @@
                                     <td><strong>15 kg (1 piece)</strong></td>
                                     <td>
 
-                                        <div>3500 3 days upto 2 hrs prior from departure</div>
+                                        <div>3999 (3 hrs before departure)</div>
                                     </td>
                                     <td>
 
-                                        <div>3000 Before 3days upto 2 hrs from departure</div>
+                                        <div>2991 (3 hrs before departure)</div>
                                     </td>
                                     <td>
                                         <div>
@@ -570,11 +570,11 @@
                                     <td><strong>15 kg (1 piece)</strong></td>
                                     <td>
 
-                                        <div>3500 (3 days upto 2 hrs prior from departure)</div>
+                                        <div>999 :-  (3 days upto 2 hrs prior from departure)</div>
                                     </td>
                                     <td>
 
-                                        <div>3000 (Before 3days upto 2 hrs from departure)</div>
+                                        <div>2999:- Before 3days upto 2 hrs from departure</div>
                                     </td>
                                     <td>
                                         <div>
@@ -596,11 +596,11 @@
                                     <td><strong>25 kg (1 piece)</strong></td>
                                     <td>
 
-                                        <div>500 Before 3days upto 2 hrs from departure</div>
+                                        <div>999 :-  (3 days upto 2 hrs prior from departure)</div>
                                     </td>
                                     <td>
 
-                                        <div>500 Before 3days upto 2 hrs from departure</div>
+                                        <div>249:- Before 3days upto 2 hrs from departure</div>
                                     </td>
                                     <td>
                                         <div>
@@ -625,7 +625,7 @@
                                     </td>
                                     <td>
 
-                                        <div>3200 (3 hrs before departure)</div>
+                                        <div>3200 (3 hrs before departure</div>
                                     </td>
                                     <td>
                                         <div>
@@ -673,7 +673,7 @@
                                     <td><strong>40 k.g.</strong></td>
                                     <td>
 
-                                        <div>Fee starts at (Rs. 2499) Onward.</div>
+                                        <div>Fee starts at (Rs. 2499) Onward.)</div>
                                     </td>
                                     <td>
 
@@ -1705,8 +1705,8 @@
                             }
                             else if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].identifier.carrierCode.Equals("6E"))
                             {
-                                <td>3500 RS. </td>
-                                <td>3 days upto 2 hrs prior from departure</td>
+                                <td>3999 RS. </td>
+                                <td>3 hrs before departure</td>
                                 <td>As per Airline Fare rule</td>
                             }
                             else if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].identifier.carrierCode.Equals("QP"))
