--- a/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundTrip/_RTFlightResultsSortingPartialView.cshtml
@@ -663,9 +663,52 @@
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].identifier.carrierCode.Equals("6E"))
                                         {
-                                            <td>3999 (3 hrs before departure</td>
-                                            <td>2991 (3 hrs before departure</td>
+
+                                            <td>3999</td>
+                                            <td>(3 hrs before departure)</td>
                                             <td>As per Airline Fare rule</td>
+
+
+                                            // if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("J"))
+                                            // {
+                                            //     <td>999</td>
+                                            //    <td> (3 days upto 2 hrs prior from departure)</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("R"))
+                                            // {
+                                            //     <td>3999</td>
+                                            //     <td>(3 hrs before departure)</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("O"))
+                                            // {
+                                            //     <td>999</td>
+                                            //     <td>3 days upto 2 hrs prior from departure</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("A"))
+                                            // {
+                                            //     <td>3500 </td>
+                                            //     <td>3 hrs before departure</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("BR"))
+                                            // {
+                                            //     <td>3499 </td>
+                                            //     <td>Fee starts at Onward.</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[0].procuctclass.Equals("BC"))
+                                            // {
+                                            //     <td>2499 </td>
+                                            //     <td>Fee starts at Onward.</td>
+                                            //     <td>As per Airline Fare rule</td>
+
+                                            // }
+
+
+
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelist[j].segments[0].identifier.carrierCode.Equals("QP"))
                                         {
@@ -1388,9 +1431,49 @@
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].identifier.carrierCode.Equals("6E"))
                                         {
-                                            <td>3999 (3 hrs before departure)</td>
-                                            <td>2991 (3 hrs before departure</td>
+                                            <td>3999</td>
+                                            <td>(3 hrs before departure)</td>
                                             <td>As per Airline Fare rule</td>
+
+
+                                            // if (Model.SimpleAvailibilityaAddResponcelistR[j].faresIndividual[0].procuctclass.Equals("J"))
+                                            // {
+                                            //     <td>999</td>
+                                            //     <td> (3 days upto 2 hrs prior from departure)</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelistR[j].faresIndividual[0].procuctclass.Equals("R"))
+                                            // {
+                                            //     <td>3999</td>
+                                            //     <td>(3 hrs before departure)</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelistR[j].faresIndividual[0].procuctclass.Equals("O"))
+                                            // {
+                                            //     <td>999</td>
+                                            //     <td>3 days upto 2 hrs prior from departure</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelistR[j].faresIndividual[0].procuctclass.Equals("A"))
+                                            // {
+                                            //     <td>3500 </td>
+                                            //     <td>3 hrs before departure</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelistR[j].faresIndividual[0].procuctclass.Equals("BR"))
+                                            // {
+                                            //     <td>3499 </td>
+                                            //     <td>Fee starts at Onward.</td>
+                                            //     <td>As per Airline Fare rule</td>
+                                            // }
+                                            // else if (Model.SimpleAvailibilityaAddResponcelistR[j].faresIndividual[0].procuctclass.Equals("BC"))
+                                            // {
+                                            //     <td>2499 </td>
+                                            //     <td>Fee starts at Onward.</td>
+                                            //     <td>As per Airline Fare rule</td>
+
+                                            // }
+                                        
                                         }
                                         else if (Model.SimpleAvailibilityaAddResponcelistR[j].segments[0].identifier.carrierCode.Equals("QP"))
                                         {
