Akasa Price commit '11-01-2025'

--- a/OnionConsumeWebAPI/Views/AkasaAirCommitBooking/AkasaAirBookingView.cshtml
+++ b/OnionConsumeWebAPI/Views/AkasaAirCommitBooking/AkasaAirBookingView.cshtml
@@ -655,7 +655,7 @@
 
                                     <tr style="background:#FCE1E1;">
                                         <td style="text-transform:uppercase;"><strong>total</strong></td>
-                                        <td><strong>Rs. @Model.AirlinePNR[0].breakdown.balanceDue</strong></td>
+                                        <td><strong>Rs. @Model.AirlinePNR[0].breakdown.totalAmount</strong></td>
                                     </tr>
                                 </tbody>
                             </table>
